Tidy up the JSs a little bit. Modified all the string column in the table Questions of the database from VARCHAR(255) to VARCHAR(MAX) to avoid the input too long problem.

--- a/Web tech/wwwroot/css/CreateQuestionsVer5.css
+++ b/Web tech/wwwroot/css/CreateQuestionsVer5.css
@@ -27,7 +27,7 @@
     padding: 10px;
     height: 100%; /* Fill column-container. */
     border: 1px solid black;
-    overflow-y: scroll;
+    overflow-y: auto;
     width: 100%;
 }
 
